# server/docs/swagger.yaml
@@ -279,7 +279,7 @@ definitions:
         type: string
       createTime:
         description: Sort       core.NullFloat // 排序
-        type: integer
+        type: string
       id:
         type: string
       tag:
@@ -290,7 +290,7 @@ definitions:
         type: string
       updateTime:
         description: 更新时间
-        type: integer
+        type: string
       version:
         description: 版本
         type: integer
@@ -298,7 +298,6 @@ definitions:
 externalDocs:
   description: OpenAPI
   url: https://swagger.io/resources/open-api/
-host: localhost:8001
 info:
   contact:
     email: 11675084@qq.com
@@ -317,7 +316,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 模板
@@ -385,7 +384,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 申请id
@@ -408,7 +407,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 申请id
@@ -435,7 +434,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 申请id
@@ -503,17 +502,17 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 页码
         in: query
-        name: PageNo
+        name: pageNo
         required: true
         type: integer
       - description: 每页数量
         in: query
-        name: PageSize
+        name: pageSize
         required: true
         type: integer
       - description: 模板
@@ -584,7 +583,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 申请id
@@ -652,7 +651,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 历史id
@@ -675,7 +674,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 历史id
@@ -702,7 +701,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 历史id
@@ -775,17 +774,17 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 页码
         in: query
-        name: PageNo
+        name: pageNo
         required: true
         type: integer
       - description: 每页数量
         in: query
-        name: PageSize
+        name: pageSize
         required: true
         type: integer
       - description: 申请id
@@ -872,7 +871,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 流程名称
@@ -915,7 +914,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 历史id
@@ -938,7 +937,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 历史id
@@ -960,7 +959,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: .
@@ -1008,17 +1007,17 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 页码
         in: query
-        name: PageNo
+        name: pageNo
         required: true
         type: integer
       - description: 每页数量
         in: query
-        name: PageSize
+        name: pageSize
         required: true
         type: integer
       - description: 流程名称
@@ -1074,7 +1073,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 项目key
@@ -1156,7 +1155,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 项目key
@@ -1234,7 +1233,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: uuid
@@ -1257,7 +1256,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 逗号分割的id
@@ -1280,7 +1279,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: uuid
@@ -1307,17 +1306,17 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 页码
         in: query
-        name: PageNo
+        name: pageNo
         required: true
         type: integer
       - description: 每页数量
         in: query
-        name: PageSize
+        name: pageSize
         required: true
         type: integer
       - description: 项目key
@@ -1487,7 +1486,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 项目key
@@ -1541,7 +1540,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 项目key
@@ -1589,7 +1588,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 错误id
@@ -1612,7 +1611,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 逗号分割的id
@@ -1635,7 +1634,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 错误id
@@ -1662,17 +1661,17 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 页码
         in: query
-        name: PageNo
+        name: pageNo
         required: true
         type: integer
       - description: 每页数量
         in: query
-        name: PageSize
+        name: pageSize
         required: true
         type: integer
       - description: 项目key
@@ -1786,7 +1785,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 项目uuid
@@ -1840,7 +1839,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 项目uuid
@@ -1878,7 +1877,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 项目id
@@ -1901,7 +1900,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 逗号分割的id
@@ -1924,7 +1923,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 项目id
@@ -1951,7 +1950,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 项目id
@@ -1994,17 +1993,17 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 页码
         in: query
-        name: PageNo
+        name: pageNo
         required: true
         type: integer
       - description: 每页数量
         in: query
-        name: PageSize
+        name: pageSize
         required: true
         type: integer
       - description: 项目uuid
@@ -2118,7 +2117,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 标题
@@ -2168,7 +2167,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 标题
@@ -2201,7 +2200,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: Id
@@ -2224,7 +2223,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 逗号分割的id
@@ -2247,7 +2246,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: Id
@@ -2274,7 +2273,7 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: Id
@@ -2312,17 +2311,17 @@ paths:
       parameters:
       - description: token
         in: header
-        name: Token
+        name: token
         required: true
         type: string
       - description: 页码
         in: query
-        name: PageNo
+        name: pageNo
         required: true
         type: integer
       - description: 每页数量
         in: query
-        name: PageSize
+        name: pageSize
         required: true
         type: integer
       - description: 标题
